fixed grades alignment

--- a/web-project/src/App.module.scss
+++ b/web-project/src/App.module.scss
@@ -70,6 +70,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: calc(100% - 10px - var(--margin));
 }
 
 .ul {
