--- a/web-project/src/components/Grades/grades.module.scss
+++ b/web-project/src/components/Grades/grades.module.scss
@@ -26,6 +26,11 @@
   margin: 10px;
 }
 
+.GradePara {
+  display: flex;
+  align-items: center;
+}
+
 .Yellow .Green {
   display: flex;
   align-items: center;
